Initial XML-based import of commentary entries is working.